--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+# This project is inspired by this example: https://github.com/eugenp/tutorials/tree/master/java-websocket
+
 # Build websocket-example.war and place in /target folder
 mvn package
 
